fix: CWU-58 carousel spacing issue

--- a/styles/components/_panel-cards.scss
+++ b/styles/components/_panel-cards.scss
@@ -1,13 +1,16 @@
 .panel-item-wrapper {
   display: flex;
   flex: 0 0 var(--items-width);
-  padding-right: clamp(20px, 5vw, 80px);
   user-select: none;
   position: relative;
   flex-direction: column;
   padding-top: 50px;
   height: 100%;
   justify-content: space-between;
+  &:not(:last-child) {
+    // 7.14% came from a calculous based on the desktop design
+    margin-right: clamp(20px, 5vw, 7.14%);
+  }
   .panel-item {
     display: flex;
     flex-direction: column;
@@ -60,13 +63,11 @@
     position: absolute;
     height: 10px;
     width: 100%;
-    padding-right: clamp(20px, 5vw, 80px);
     background-color: var(--theme-color, white);
     top: 0;
     left: 0;
     background-clip: content-box;
-    clip-path: polygon(0% 0%, 74% 0%, 80% 100%, 100% 100%, 00% 100%);
-    transform: translateX(3px);
+    clip-path: polygon(0% 0%, 94% 0%, 100% 100%, 100% 100%, 00% 100%);
   }
   .rotate-svg {
     border-bottom: 1px solid white;
